--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Hailey &amp; Michael</h1>
 							<br>
-							<img src="images/fprint.png" alt="Shyam + Rincy"> 
+							<img src="images/fprint.png" alt="Hailey + Michael"> 
 							<h2>20.07.2025</h2>
 							<h2>"I have found the one whom my soul loves." <br>Song of Solomon 3:4</h2>
 							<div class="flipTimebox">
@@ -129,7 +129,7 @@
 										<i class="icon-clock"></i>
 										<span>10:00 PM</span>
 									</div>
-									<p>At <b>Timber Ridge Event Centre, Blenheim (Chatham-Kent)</b> Followed by lunch</p>
+									<p>At <b>Timber Ridge Event Centre, Blenheim (Chatham-Kent)</b> Lunch to follow</p>
 						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2985.0292994138417!2d-81.93610228393833!3d42.40005733581515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882fe7d45b45453b%3A0xfcff9ac4953ac8ed!2sTimber%20Ridge%20Event%20Centre%2C%20Blenheim%20(Chatham-Kent)!5e1!3m2!1sen!2sca!4v1739043587186!5m2!1sen!2sca" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>			
 
 								</div>
@@ -153,21 +153,21 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/RS1.jpg); "> 
-						<a href="images/RS1.jpg">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/HM1.jpg); "> 
+						<a href="images/<HM1.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/RS2.jpg); "> 
-						<a href="images/RS2.jpg">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/HM2.jpg); "> 
+						<a href="images/HM2.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/RS3.jpg); "> 
-						<a href="images/RS3.jpg">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/HM3.jpg); "> 
+						<a href="images/HM3.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
@@ -212,6 +212,6 @@
 	<script src="js/simplyCountdown.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
-	<center>View Source Code on <a href="https://github.com/shyamjos/wedding-website">GitHub <img src="images/github-logo.png"> </a> </center>
+	<center>View Source Code on <a href="https://github.com/asthrou/wedding-website">GitHub <img src="images/github-logo.png"> </a> </center>
 	</body>
 </html>
