--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Shyam ❤️ Rincy - 29.10.2023</title>
+	<title>Hailey ❤️ Michael - 20.07.2025</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="We are getting hitched - The dates are 21st & 29th of October '23 and we would like you to be a part of it." />
-	<meta name="keywords" content="shyam,rincy,wedding,website,rsvp" />
-	<meta name="author" content="Shyam & Rincy" />
+	<meta name="description" content="We are getting hitched - The date is July 20th, 2025 and we would like you to be a part of it." />
+	<meta name="keywords" content="hailey,michael,wedding,website,rsvp" />
+	<meta name="author" content="Hailey & Michael" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:image" content="images/og.jpg"/>
-	<meta property="og:site_name" content="Shyam ❤️ Rincy - 29.10.2023">
-    <meta property="og:title" content="Shyam ❤️ Rincy - 29.10.2023">
-    <meta property="og:description" content="We are getting hitched - The dates are 21st & 29th of October '23 and we would like you to be a part of it.">
+	<meta property="og:site_name" content="Hailey ❤️ Michael - 20.07.2025">
+    <meta property="og:title" content="Hailey ❤️ Michael - 20.07.2025">
+    <meta property="og:description" content="We are getting hitched - The date is July 20th, 2025 and we would like you to be a part of it.">
 	<!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
     <!-- Website to visit when clicked in fb or WhatsApp-->
-    <meta property="og:url" content="https://we.shyamjos.com">
+    <meta property="og:url" content="https://haileyandmichael.ca">
 	<meta property="og:type" content="website"/>
     <meta property="og:image:type" content="image/jpeg">
 
@@ -70,9 +70,9 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
-						<li class="active"><a href="#fh5co-event">Events</a></li>
+						<li class="active"><a href="#fh5co-event">Event</a></li>
 						<li class="active"><a href="#fh5co-gallery">Gallery</a></li>
-						<li class="active"><a href="#fh5co-services">Highlights</a></li>
+						
 					</ul>
 				</div>
 			</div>
@@ -89,8 +89,8 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Hailey &amp; Michael</h1>
 							<br>
-							<img src="images/fprint.png" alt="Shyam + Rincy"> 
-							<h2>29.10.2023</h2>
+							<img src="images/fprint.png" alt="Hailey + Michael"> 
+							<h2>20.07.2025</h2>
 							<h2>"I have found the one whom my soul loves." <br>Song of Solomon 3:4</h2>
 							<div class="flipTimebox">
 								<div class="clock clock-fix"></div>
@@ -110,7 +110,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Events</h2>
+					<h2>Event</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -119,34 +119,19 @@
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Betrothal</h3>
-									<div class="event-col">
-										<i class="icon-calendar"></i>
-										<span>21 October 2023</span>
-									</div>
-									<div class="event-col">
-
-										<i class="icon-clock"></i>
-										<span>11:30 AM</span>
-									</div>
-									<p>At <b>St. Vincent De Paul Church Edathotty, Kannur.</b> Followed by lunch at <b>Robin's Wedding Cafe, Edathotty.</b></p>
-									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3903.673315773661!2d75.71257847590881!3d11.927808088299846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba5cd2b69442ebf%3A0x41b4e77a403a15b4!2sDe%20Paul%20Church%2C%20Edathotty!5e0!3m2!1sen!2sin!4v1696094112600!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-								</div>
-							</div>
-							<div class="col-md-6 col-sm-6 text-center">
-								<div class="event-wrap animate-box">
 									<h3>Wedding</h3>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>29 October 2023</span>
+										<span>July 20th, 2025</span>
 									</div>
 									<div class="event-col">
 
 										<i class="icon-clock"></i>
-										<span>12:00 PM</span>
+										<span>10:00 PM</span>
 									</div>
-									<p>At <b>St. Antony's Church Cheriyappilly, North Paravur.</b> Followed by lunch at <b>IMA Hall, North Paravur</b></p>
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3927.690238117892!2d76.24293817588756!3d10.124421489987455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0810402ea732f5%3A0x7e23209bf83c2a9b!2sSt.Antony&#39;s%20Roman%20Catholic%20Church!5e0!3m2!1sen!2sin!4v1696094216568!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+									<p>At <b>Timber Ridge Event Centre, Blenheim (Chatham-Kent)</b> Lunch to follow</p>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2985.0292994138417!2d-81.93610228393833!3d42.40005733581515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882fe7d45b45453b%3A0xfcff9ac4953ac8ed!2sTimber%20Ridge%20Event%20Centre%2C%20Blenheim%20(Chatham-Kent)!5e1!3m2!1sen!2sca!4v1739043587186!5m2!1sen!2sca" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>			
+
 								</div>
 							</div>
 						</div>
@@ -168,21 +153,21 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/RS1.jpg); "> 
-						<a href="images/RS1.jpg">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/HM1.jpg); "> 
+						<a href="images/<HM1.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/RS2.jpg); "> 
-						<a href="images/RS2.jpg">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/HM2.jpg); "> 
+						<a href="images/HM2.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/RS3.jpg); "> 
-						<a href="images/RS3.jpg">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/HM3.jpg); "> 
+						<a href="images/HM3.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
@@ -196,28 +181,6 @@
 
 
 
-	<div id="fh5co-services" class="fh5co-section-gray">
-		<div class="container">
-			
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Highlights</h2>
-
-				</div>
-			</div>
-
-
-
-				<div class="container animate-box">
-					<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
-						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>
-						<div class="overlay"></div>
-					</div>
-				</div>
-			</div>
-			
-		</div>
-	</div>
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
@@ -249,6 +212,6 @@
 	<script src="js/simplyCountdown.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
-	<center>View Source Code on <a href="https://github.com/shyamjos/wedding-website">GitHub <img src="images/github-logo.png"> </a> </center>
+	<center>View Source Code on <a href="https://github.com/asthrou/wedding-website">GitHub <img src="images/github-logo.png"> </a> </center>
 	</body>
 </html>
