--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									<div class="event-col">
 
 										<i class="icon-clock"></i>
-										<span>10:00 PM</span>
+										<span>12:00 PM</span>
 									</div>
 									<p>At <b>Timber Ridge Event Centre, Blenheim (Chatham-Kent)</b> Lunch to follow</p>
 						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2985.0292994138417!2d-81.93610228393833!3d42.40005733581515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882fe7d45b45453b%3A0xfcff9ac4953ac8ed!2sTimber%20Ridge%20Event%20Centre%2C%20Blenheim%20(Chatham-Kent)!5e1!3m2!1sen!2sca!4v1739043587186!5m2!1sen!2sca" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>			
@@ -154,7 +154,7 @@
 					<ul id="fh5co-gallery-list">
 						
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/HM1.jpg); "> 
-						<a href="images/<HM1.jpg">
+						<a href="images/HM1.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
