--- a/index.html
+++ b/index.html
@@ -115,11 +115,29 @@
 			</div>
 			<div class="row">
 				<div class="display-t">
-					<div class="display-tc">
+					<div class="display-tc">			
 						<div class="col-md-10 col-md-offset-1">
+
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Wedding</h3>
+									<h3>BC Wedding</h3>
+									<div class="event-col">
+										<i class="icon-calendar"></i>
+										<span>August 16th, 2025</span>
+									</div>
+									<div class="event-col">
+
+										<i class="icon-clock"></i>
+										<span>Crack of Dawn!</span>
+									</div>
+									<p>At <b>Kelly Falls</b> Powell River, BC</p>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10289.424854664352!2d-124.39696606185183!3d49.85455301102681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5487e7dede07b23d%3A0x3237d88d8efb29ee!2sKelly%20Falls!5e0!3m2!1sen!2sca!4v1739907870130!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+								</div>
+							</div>
+							<div class="col-md-6 col-sm-6 text-center">
+								<div class="event-wrap animate-box">
+									<h3>Ontario Wedding</h3>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
 										<span>July 20th, 2025</span>
