--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
 										<i class="icon-clock"></i>
 										<span>Crack of Dawn!</span>
 									</div>
-									<p>At <b>Kelly Falls</b> Powell River, BC</p>
+									<p>At <b>Kelly Falls</b></p>
+									<p>Powell River, BC</p>
 						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10289.424854664352!2d-124.39696606185183!3d49.85455301102681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5487e7dede07b23d%3A0x3237d88d8efb29ee!2sKelly%20Falls!5e0!3m2!1sen!2sca!4v1739907870130!5m2!1sen!2sca" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 								</div>
