--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 									<span class="date">May 2017</span>
 								</div>
 								<div class="timeline-body">
-									<p>Our little families met for the first time and quickly grew! Calleigh joined us on October 2018, and Genevieve on June 2020. We began planning many adventures together as a family and enjoyed countless more. From day trips to full excursions in Algonquin, Toronto, Niagara, Ohio (we don’t talk about Ohio) and Kingston. We have many more surprises for the coming years too.</p>
+									<p>Our little families met for the first time and quickly grew! Calleigh joined us October 2018, and Genevieve June 2020. We began planning many adventures together as a family and enjoyed countless more. From day trips to full excursions in Algonquin, Toronto, Niagara, Ohio (we don’t talk about Ohio) and Kingston. We have many more surprises for the coming years too.</p>
 								</div>
 							</div>
 						</li>
